# tea

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  game.toml  main.wren  myapp.wren  run_format.sh
.github/: FUNDING.yml
.github/workflows/: CI.yml  TODO  fmt.yml
_test_game/: main.wren  teaproject.json
examples/: graphicstest.wren  main.wren  platformer.wren
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
include/: engine.h
include/assets/: assets.h
include/core/: engine.h  logger.h  platform.h  platformcreator.h
include/gfx/: colour.h  commandbuffer.h  graphics.h  renderer.h
include/impl/: platformsdl2.h  renderergl33.h
include/impl/blank/: platformblank.h  rendererblank.h
include/scripting/: bindings.h  scripting.h  scriptingevents.h  slot.h
include/utils/: nocopy.h  visitoverload.h
misc/: README.md
misc/cmake/: FindSDL2.cmake
misc/res/no_game/: TODO.txt
misc/res/script/: main.wren  prelude.wren
res/tea/: assets.wren  graphics.wren  input.wren  prelude.wren
src/: CMakeLists.txt  assets.c  assets.cpp  assets.h  bindings.cpp  bindings.h  engine.cpp  engine.h  engine.hpp  main.c  main.cpp  module.h  platform.h  platform_sdl.cpp  platform_sdl.h  renderer.cpp  renderer.h  scripting.cpp  scripting.h  utils.cpp  utils.h  vec.h
src/assets/: CMakeLists.txt  asset.cpp  asset.h  assets.cpp  assets.h  image.cpp  image.h  image_loader.h  imageloader.cpp  imageloader.h  ogg_sound.cpp  ogg_sound.h  ogg_sound_player.cpp  sound.h
src/assets/image/: image.cpp  image.h  image_loader.cpp
src/assets/sound/: ogg_sound_player.h  sound.h  sound_loader.cpp  sound_loader.h  sound_player.h
src/core/: CMakeLists.txt  engine.cpp  logger.cpp  platformcreator.cpp
src/gfx/: CMakeLists.txt  colour.cpp  commandbuffer.cpp  graphics.cpp  renderer.cpp
src/graphics/: color.cpp  color.h  shader.cpp  shader.h  texture.cpp  texture.h
src/impl/: CMakeLists.txt  platformsdl2.cpp  renderergl33.cpp
src/impl/blank/: CMakeLists.txt  platformblank.cpp  rendererblank.cpp
src/modules/: audio.cpp  audio.h  input.cpp  input.h  renderer.cpp  renderer.h
src/platform/: platform.h  sdl.cpp  sdl.h
src/scripting/: CMakeLists.txt  bindings.cpp  scripting.cpp  scriptingevents.cpp  slot.cpp
tea/: Cargo.toml  build.rs
tea/src/: engine.rs  lib.rs  main.rs  platform.rs
tea/src/core/: engine.rs  mod.rs  platform.rs
tea/src/gfx/: colour.rs  commandbuffer.rs  mod.rs  renderer.rs
tea/src/implementations/: mod.rs  platformsdl2.rs  renderergl33.rs
wren-bindgen/: Cargo.toml  build.rs  wrapper.h
wren-bindgen/src/: lib.rs
wren-rust/: Cargo.toml
